<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg1"
    tools:context=".MainActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/header2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/header2"
        android:layout_alignParentBottom="true"/>
    <View
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@color/header1"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/img1"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="6dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/border"
        app:civ_shadow_radius="10" />
    <TextView
        android:id="@+id/biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biodata"
        android:layout_marginLeft="170dp"
        android:textColor="@color/text"
        android:layout_marginTop="70dp"
        android:textSize="30sp" />
    <View
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="120dp"
        android:background="@color/border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="45dp"
        android:paddingTop="15dp"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/nim"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/biodata"
            android:text="@string/nim"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text"/>
        <TextView
            android:id="@+id/angka"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/biodata"
            android:textColor="@color/text"
            android:text="@string/nim1"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/nim"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/nama"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"
            android:text="@string/nama"
            android:layout_below="@+id/nim"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/huruf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginLeft="5dp"
            android:text="@string/nama1"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/angka"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/nama"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/alamat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:layout_below="@+id/nama"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/alamat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/alamat1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/huruf"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/alamat"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/telepon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/telepon"
            android:textColor="@color/text"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/alamat"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/no_telp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telepon1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/alamat1"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/alamat"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="5dp"
            android:textColor="@color/text"
            android:layout_below="@+id/telepon"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/telepon"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/email"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Next ->"
            android:onClick="next"/>

    </LinearLayout>
</RelativeLayout>