<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg1"
    tools:context=".MainActivity2">
    <View
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/header2"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/header2"
        android:layout_alignParentBottom="true"/>
    <View
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/header1"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/img1"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="6dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/border"
        app:civ_shadow_radius="10" />
    <TextView
        android:id="@+id/biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biodata"
        android:layout_marginLeft="15dp"
        android:textColor="@color/text"
        android:layout_marginTop="70dp"
        android:textSize="30sp" />
    <View
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:background="@color/border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="175dp"
        android:layout_marginRight="45dp"
        android:paddingTop="15dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/pendidikan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"
            android:text="@string/pendidikan"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sd"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text"
            android:text="@string/sd"
            android:layout_alignParentRight="true"
            android:textSize="15sp"/>
        <TextView
        android:id="@+id/smp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/text"
        android:text="@string/smp"
        android:layout_alignParentRight="true"
        android:textSize="15sp"/>
        <TextView
            android:id="@+id/angka"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text"
            android:text="@string/sma"
            android:layout_alignParentRight="true"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/sma"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"
            android:text="@string/hobi"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/hobi"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text"
            android:text="@string/hobi1"
            android:layout_alignParentRight="true"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="Balik"
            android:onClick="balik"/>

    </LinearLayout>
</RelativeLayout>